# openshift-june-2026

./: README.md
Day1/: README.md
Day2/: README.md
Day2/simple-springboot-microservice/: Dockerfile  README.md  pom.xml
Day2/simple-springboot-microservice/CustomImage/: Dockerfile
Day2/simple-springboot-microservice/k8s/: greeting-service.yaml
Day2/simple-springboot-microservice/src/main/resources/: application.properties
Day3/: README.md
Day3/wordpress-mysql-refactored/: deploy.sh  mysql-pv.yml  mysql-statefulset.yml  proxysql-cm.yml  proxysql-deploy.yml  undeploy.sh  wordpress-pv.yml  wordpress-statefulset.yml
Day3/wordpress-with-configmaps-and-secrets/: deploy.sh  mysql-deploy.yml  mysql-pv.yml  mysql-pvc.yml  mysql-svc.yml  undeploy.sh  wordpress-cm.yml  wordpress-deploy.yml  wordpress-pv.yml  wordpress-pvc.yml  wordpress-route.yml  wordpress-secrets.yml  wordpress-svc.yml
Day4/: README.md
Day4/statefulset/: mysql-statefulset-nfs.yaml  sfs.yml
Day5/: README.md
Day5/CICD/: buildconfig.yml
Day5/docs-as-code/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  bazel-bin  bazel-docs-as-code  bazel-out  bazel-testlogs  requirements.txt
Day5/docs-as-code/day1/: README.md
Day5/docs-as-code/day2/: BUILD  README.md
Day5/docs-as-code/day3/: README.md
Day5/docs-as-code/docs/: BUILD
Day5/docs-as-code/src/: BUILD  md2pdf.py
Day5/docs-as-code/tests/: BUILD  test_md2pdf.py
Day5/docs-as-code/tools/: md2pdf_rule.bzl
Day5/helm-chart/: values.yaml
Day5/helm-chart/scripts/: wordpress-deploy.yml
(+2 files in other folders)
