module(
    name    = "md2pdf",
    version = "1.0.0",
)

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

# Hermetic Python 3.11 toolchain — no dependency on the host python3.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    is_default     = True,
)

# PyPI dependencies — resolved from requirements.txt at build time.
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name          = "pip",
    python_version    = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")
